--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-            <title>牛奶直播</title>
+            <title>分发</title>
     </head>
     <style body="text-align:center"></style>
     <body width="100" height="100">
