--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
         <img style="text-align:center" src="https://airbnb-node-web-app.oss-cn-beijing.aliyuncs.com/runlogo.png" width="100" height="100" alt=""/>
         
     </body>
-    <a style="text-align:center" href="itms-services://?action=download-manifest&url=https://airbnb-node-web-app.oss-cn-beijing.aliyuncs.com/mainfest.plist">点我下载</a>
+    <a style="text-align:center" href="itms-services://?action=download-manifest&url=https://airbnb-node-web-app.oss-cn-beijing.aliyuncs.com/manifest.plist">点我下载</a>
 </html>
